Changed body to html to stop right scrolling on mobile

--- a/friends/css/friends.css
+++ b/friends/css/friends.css
@@ -9,8 +9,7 @@
     padding: 0;
     box-sizing: border-box;
 }
-body {
-    width: 100%;
+html {
     overflow-x: hidden !important;
 }
 .top-navigation-bar {
